--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+{% if messages %}
+    {% for message in messages %}
+        <div class='ui warning message'>
+        {{message}}
+        </div>
+    {% endfor %}
+{% endif %}
 <div class='ui two column centered grid'>
     <form method="post" action='' />
         {% csrf_token %}
@@ -12,7 +19,7 @@
             {{ form.first_name }}
         </div>
         <div>
-            Lasе name: <br />
+            Last name: <br />
             {{ form.last_name }}
         </div>
         <div>
