added github link to footer.html

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,7 +17,7 @@
             <div class="column"></div>
             <div class="column"></div>
             <div class="column">
-                <a href='#'>Git Hub Repo</a>
+                <a href='https://github.com/MykhCher/pet-proj-askfm'>Git Hub Repo</a>
             </div>
             <div class="column">
                 <a href='{% url 'edit_profile' %}'>{{request.user.first_name}} {{request.user.last_name}}</a>
