finished django admin, added block user func

--- a/accounts/templates/check_profile.html
+++ b/accounts/templates/check_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% if messages %}
     {% for message in messages %}
-        <div class='ui warning message'>
+        <div class='ui positive message'>
         {{message}}
         </div>
     {% endfor %}
