--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
                 <a href='https://www.facebook.com/profile.php?id=100080199020752'>
                     <img src={% static 'logo/fb.png' %} style='max-height: 40px; max-width: 40px'>
                 </a>
-                <a href='#'>
+                <a href='https://twitter.com/chernov_1102'>
                     <img src={% static 'logo/twitter.png' %} style='max-height: 68px; max-width: 68px'>
                 </a>
             </div>
