--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -2,12 +2,22 @@
 
 {% block content %}
 
-<form action="", method="GET">
-    <input type="text" name="search" class='ui input'>
-    <div>
-        <input type="submit" value="Search" class='ui button'>
-    </div>
-</form>
+
+{% for message in messages %}
+<div class='ui negative message'>
+{{message}}
+</div>
+{% endfor %}
+
+<div class="search-box">
+    <form action="", method="GET">
+        <input type="text" name="search" class='ui input'>
+        <div>
+            <input type="submit" value="Search" class='ui button'>
+        </div>
+    </form>
+</div>
+
 <div class="ui two column centered grid">
     <div class="four column centered row">
         <div class="column" id='answers'>
