--- a/accounts/templates/check_profile.html
+++ b/accounts/templates/check_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{profile.first_name}} {{profile.last_name}}
+{{profile.first_name}} {{profile.last_name}} | 
 {% endblock title %}
 
 {% block content %}
