--- a/core/templates/quest_create.html
+++ b/core/templates/quest_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-<title>Ask a question</title>
+Ask a question | 
 {% endblock title %}
 {% block content %}
 {% if adressant.pk == request.user.pk %}
