--- a/core/templates/quest_list.html
+++ b/core/templates/quest_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Questions for You | {% endblock title %}
+
 {% block content %}
 
 <form action="", method="GET">
