--- a/templates/footer.html
+++ b/templates/footer.html
@@ -20,7 +20,9 @@
                 <a href='https://github.com/MykhCher/pet-proj-askfm'>Git Hub Repo</a>
             </div>
             <div class="column">
-                <a href='{% url 'edit_profile' %}'>{{request.user.first_name}} {{request.user.last_name}}</a>
+                {% if request.user.is_authenticated %}
+                <a href='{% url 'check_profile' request.user.id %}'>{{request.user.first_name}} {{request.user.last_name}}</a>
+                {% endif %}
             </div>
         </div>
 
