--- a/core/templates/userlist.html
+++ b/core/templates/userlist.html
@@ -1,16 +1,76 @@
 {% extends 'base.html' %}
 {% block title %}Users | {% endblock title %}
 
+{% block style %}
+    
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    margin: 5px;
+    padding: 5px;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
+
+{% endblock style %}
+
 {% block content %}
+<div class="dropdown">
+  <button onclick="myFunction()" class="ui secondary button dropbtn">Show search options</button>
+  <div id="myDropdown" class="dropdown-content">
+
+        <form action="" method="GET">
+
+            <input type="text" class="ui input" name="search">
+            <input type="submit" class="ui button" value="Search">
+            <hr>
+            <div><p>Search filters:</p></div>
+            <div>
+                <input type="checkbox" id="first_name" name="first_name" checked>
+                <label for="first_name">First Name</label>
+            </div>
+                
+            <div>
+                <input type="checkbox" id="last_name" name="last_name">
+                <label for="last_name">Last Name</label>
+            </div>
+
+            <div>
+                <input type="checkbox" id="email" name="email">
+                <label for="email">Email</label>
+            </div>
+        </form>
+
+    </div>
+</div>
+
+
 
 {% comment %} user profiles block {% endcomment %}
 
-<div class="ui eight column grid">
+<div class="ui two column centered grid" id="userlist_grid">
+    <div class="four column centered row">
     {% for obj in page_obj %}
         {% if obj.id|divisibleby:2 %}
-            <div class="column"></div>
-            <div class="column"></div>
-            <div class="column"></div>
             <div class="column">
                 <div class="ui card">
                     <div class="content">
@@ -18,7 +78,8 @@
                             {{obj.first_name}} {{obj.last_name}}
                             {% if obj.id == request.user.id %} (you) {% endif %}
                         </div>
-                        <div class="meta">{{obj.email}} &#13;&#10 Occupation: {{obj.town}}</div>
+                        <div class="meta">{{obj.email}}</div>
+                        <div class="meta">Occupation: {{obj.town}}</div>
                         <div class="subheader">  
                             <a href={% url 'check_profile' obj.id %}> Check profile </a>
                         </div>
@@ -26,25 +87,24 @@
                 </div>
             </div>
         {% else %}
-        <div class="column">
-            <div class="ui card">
-                <div class="content">
-                    <div class="header">
-                        {{obj.first_name}} {{obj.last_name}}
-                        {% if obj.id == request.user.id %} (you) {% endif %}
-                    </div>
-                    <div class="meta">{{obj.email}} &#13;&#10 Occupation: {{obj.town}}</div>
-                    <div class="subheader">  
-                        <a href={% url 'check_profile' obj.id %}> Check profile </a>
+            <div class="column">
+                <div class="ui card">
+                    <div class="content">
+                        <div class="header">
+                            {{obj.first_name}} {{obj.last_name}}
+                            {% if obj.id == request.user.id %} (you) {% endif %}
+                        </div>
+                        <div class="meta">{{obj.email}}</div>
+                        <div class="meta">Occupation: {{obj.town}}</div>
+                        <div class="subheader">  
+                            <a href={% url 'check_profile' obj.id %}> Check profile </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
         {% endif %}
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
 <br />
 <br />
@@ -72,3 +132,12 @@
     </div>
 </div>
 {% endblock content %}
+
+
+{% block script %}
+<script>
+    function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+    }
+</script>
+{% endblock script %}
