--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="{% static 'logo/images.png' %}">
 
@@ -14,6 +14,9 @@
     </title>
     <style>
         {% include "style.css" %}
+
+        {% block style %}
+        {% endblock style %}
     </style>
 </head>
 <body>
