--- a/core/templates/quest_detail.html
+++ b/core/templates/quest_detail.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
+
+{% for message in messages %}
+<div class='ui negative message'>
+{{message}}
+</div>
+{% endfor %}
+
 <div class="ui items">
     <div class="item">
         <div class="content">
